- Updated models - Updated CustomAuthProvider to use JWT token for authentication - Completed Service methods for all domains - Setup custome css for login and register pages - Structured app using Main, Authorized, Public and Null Layouts - User based Sidebar access by AuthorizeView which handles auth states - Added appsettings for universal baseURL access - Add js Interop func for dynamic CSS injection via pageStyles.js - load ApiBaseURL from appsettings.json and register services with custom auth provider

--- a/apps/logistics-frontend/Pages/Admin/Orders.razor
+++ b/apps/logistics-frontend/Pages/Admin/Orders.razor
@@ -1,6 +1,10 @@
-@page "/orders"
+@page "/admin/orders"
+@layout MainLayout
 @using logistics_frontend.Models.Order
 @inject OrderService OrderService
+@inject AuthenticationStateProvider AuthProvider
+@inject NavigationManager Navigation
+@attribute [Authorize(Roles = "admin")]
 
 <h3>All Orders</h3>
 
