--- a/apps/logistics-frontend/Pages/Admin/CreateOrder.razor
+++ b/apps/logistics-frontend/Pages/Admin/CreateOrder.razor
@@ -1,7 +1,9 @@
-@page "/createorder"
+@page "/admin/createorder"
+@layout MainLayout
 @using logistics_frontend.Models.Order
 @inject OrderService OrderService
 @inject NavigationManager Navigation
+@inject AuthenticationStateProvider AuthProvider
 @attribute [Authorize(Roles = "admin")]
 
 <h3>Create New Order</h3>
@@ -68,18 +70,16 @@
             }
         } 
         else 
-            {
-                errorMessage = "Invalid Customer ID format.";
-                await ClearMessageAfterDelay();
-            }
-        }
-
-        private async Task ClearMessageAfterDelay()
         {
-            await Task.Delay(4000);
-            successMessage = null;
-            errorMessage = null;
-            StateHasChanged(); // trigger UI update
+            errorMessage = "Invalid Customer ID format.";
+            await ClearMessageAfterDelay();
         }
+    }
+    private async Task ClearMessageAfterDelay()
+    {
+        await Task.Delay(4000);
+        successMessage = null;
+        errorMessage = null;
+        StateHasChanged(); // trigger UI update
     }
 }
