--- a/apps/logistics-frontend/_Imports.razor
+++ b/apps/logistics-frontend/_Imports.razor
@@ -1,13 +1,19 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
-@using Microsoft.AspNetCore.Components.Authorization
-@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
+
 @using logistics_frontend
-@using logistics_frontend.Layout
+@using logistics_frontend.Pages
 @using logistics_frontend.Pages.Shared
+@using logistics_frontend.Pages.Shared.Sidebars
+@using logistics_frontend.Models.User
+@using logistics_frontend.Models.Delivery
+@using logistics_frontend.Services
+@using logistics_frontend.Pages.Shared.Layouts
