--- a/apps/logistics-frontend/Pages/Shared/Sidebars/SidebarComponent.razor
+++ b/apps/logistics-frontend/Pages/Shared/Sidebars/SidebarComponent.razor
@@ -57,6 +57,8 @@
         new("Dashboard", "/admin/dashboard"),
         new("Create Order", "/admin/createorder"),
         new("Orders", "/admin/orders"),
+        new("Create Inventory", "/admin/createinventory"),
+        new("Inventories", "/admin/inventories"),
         new("Reports", "/admin/reports"),
         new("Users", "/admin/users"),
     };
