--- a/apps/logistics-frontend/_Imports.razor
+++ b/apps/logistics-frontend/_Imports.razor
@@ -15,6 +15,7 @@
 @using logistics_frontend.Pages.Shared.Sidebars
 @using logistics_frontend.Models.User
 @using logistics_frontend.Models.Delivery
+@using logistics_frontend.Models.Inventory
 @using logistics_frontend.Services
 @using logistics_frontend.Pages.Shared.Layouts
 @using logistics_frontend.Pages.Shared.Dashboard
