--- a/apps/logistics-frontend/Pages/Admin/Users.razor
+++ b/apps/logistics-frontend/Pages/Admin/Users.razor
@@ -44,6 +44,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        Console.WriteLine("UserPage: OnInitializedAsync called.");
         users = await UserService.GetAllUsers();
     }
 }
