feat (frontend): Error handling, public page routing - add ServiceResult for better error and response handling from api calls - added public layout to app.razor for alt routing to authorized pages - add ErrorResponse to match error format from backend - add validation texts to create inv page - new landing page

--- a/apps/logistics-frontend/App.razor
+++ b/apps/logistics-frontend/App.razor
@@ -7,7 +7,7 @@
             <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         </Found>
         <NotFound>
-            <LayoutView Layout="@typeof(MainLayout)">
+            <LayoutView Layout="@typeof(PublicLayout)">
                 <h3>Sorry, the page you're looking for doesn't exist.</h3>
             </LayoutView>
         </NotFound>
