--- a/apps/logistics-frontend/Pages/Auth/Register.razor
+++ b/apps/logistics-frontend/Pages/Auth/Register.razor
@@ -1,5 +1,5 @@
 @page "/auth/register"
-@layout NullLayout
+@layout PublicLayout
 @using System.ComponentModel.DataAnnotations
 @using System.Text.Json
 @inject AuthenticationStateProvider AuthProvider
