--- a/apps/logistics-frontend/_Imports.razor
+++ b/apps/logistics-frontend/_Imports.razor
@@ -16,6 +16,7 @@
 @using logistics_frontend.Models.User
 @using logistics_frontend.Models.Delivery
 @using logistics_frontend.Models.Inventory
+@using logistics_frontend.Models.Errors
 @using logistics_frontend.Services
 @using logistics_frontend.Pages.Shared.Layouts
 @using logistics_frontend.Pages.Shared.Dashboard
